--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <p>My enneagram is Type  5(Reformer).</p>
   <p>The good thing about me. I will do whatever you guys ask me to do and do not need a in-person meeting. I think using email or other app is engough to communicate.</p>
   <p>I will try my best to do everything done on time.</p>
+  <p><img src ="result.JPG"></p>
 </body>
 </html>
