--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <p>Hello, This is <strong>Seungyeon Chang</strong></p>
   <p>My enneagram is Type 5 (Investigator).</p>
-  <p>The good thing about me. I will do whatever you guys ask me to do and do not need a in-person meeting. I think using email or other app is engough to communicate.</p>
+  <p>The good thing about me, I will do whatever you guys ask me to do and do not need a in-person meeting. I think using email or other app is engough to communicate.</p>
   <p>I will try my best to do everything done on time.</p>
   <p><img src ="/resjult.JPG"></p>
 </body>
